# electricity-cost-calculator

./: .gitignore  README.md  env.py  openei_test.py  pyproject.toml
cost_calculator/: cost_calculator.py  rate_structure.py  tariff_structure.py
electricitycostcalculator/: __init__.py
electricitycostcalculator/cost_calculator/: cost_calculator.py
electricitycostcalculator/oadr_signal/: DR_template.py  __init__.py  getDRSignal.py  getPelicanDREvents.py  getSCEEvents.py  settings_template.json  tariff_maps.py  utils.py
electricitycostcalculator/openei_tariff/: E-190-revised.json  PDP_events_ex.json  openei_tariff_analyzer.py  u14328_Commercial_A-10_TOU_gridlevelSecondary_revised.json  u14328_Commercial_B-19S_TOU_gridlevelSecondary_revised.json  u17609_Commercial_TOU-8_TOU_revised.json  (+4 more)
example/: openei_test.py
oadr_signal/: .gitignore  __init__.py  event_days2018.csv  getDRSignal.py  getPelicanDREvents.py  getSCEEvents.py  tariff_maps.py  utils.py
openei_tariff/: .gitignore  PDP_events.json  openei_tariff_analyzer.py  tariff_pge_a10_tou.var  u14328_Commercial_A-1 Small General Service_TOU_phaseSingle_revised.json  u14328_Commercial_A-10_TOU_gridlevelSecondary_revised.json  u14328_Commercial_A-6_TOU_revised.json  u14328_Commercial_E-19_PROPOSED_TOU_gridlevelSecondary_revised.json  u14328_Commercial_E-19_TOU_gridlevelSecondary_revised.json  u17609_Commercial_TOU-8_TOU_revised.json  u17609_Commercial_TOU-GS-3_TOU_revised.json  u90_Commercial_FLAT-06_revised.json  ulbnl_Commercial_FLAT-06_revised.json  urcea_Commercial_E-19S_TOU_gridlevelSecondary_revised.json
